when getting the user info for the dialog, make sure that we update the nickname for the contact.

also make sure that we update the contact name on login as well.

BUG: 105786


svn path=/trunk/KDE/kdenetwork/kopete/; revision=435392